--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,12 @@
 .active {
     color: orange;
 }
+
+@layer components {
+    .inp {
+        @apply rounded-md p-2 focus:outline-orange-400 shadow;
+
+
+    }
+
+}
